Update 'go-xzhyjzwn' component image to: quay.io/rhtap_qe/go-xzhyjzwn:6d2ba1fe1616b80866b30377b890604f6ad91a71@sha256:f207469534a2eb5f6e03e0f9840d48d933c0b14111217ef9f32fb745c946350a

--- a/components/go-xzhyjzwn/overlays/development/deployment-patch.yaml
+++ b/components/go-xzhyjzwn/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: go-xzhyjzwn
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/go-xzhyjzwn:6d2ba1fe1616b80866b30377b890604f6ad91a71@sha256:f207469534a2eb5f6e03e0f9840d48d933c0b14111217ef9f32fb745c946350a
+          name: container-image
